@@ -2,7 +2,6 @@ use Module::Build;
 
 use 5.6.0;
 
-use strict;
 use warnings;
 
 # ----------------------
@@ -29,20 +28,27 @@ Module::Build -> new
 	license       => 'perl',
 	requires      =>
 	{
-		'perl'         => '5.6.0',
-		'Scalar::Util' => '1.10',
+		perl         => 5.6.0,
+		Scalar::Util => 1.10,
 	},
 	configure_requires =>
 	{
-		'Module::Build' => 0.40,
+		Module::Build => 0.40,
 	},
 	build_requires =>
 	{
-		'Scalar::Util'    => '1.10',
-		'Test::Deep'      => '0.088',
-		'Test::Exception' => '0.15',
-		'Test::More'      => '0.47',
-		'Test::Warn'      => '0.08',
+		base            => 2.16,
+		constant        => 1.21,
+		Data::Dumper    => 2.136,
+		Exporter        => 5.66,
+		overload        => 1.13,
+		Scalar::Util    => 1.10,
+		strict          => 1.04,
+		Test::Deep      => 0.088,
+		Test::Exception => 0.15,
+		Test::More      => 0.47,
+		Test::Warn      => 0.08,
+		warnings        => 1.12,
 	},
 	recursive_test_files => 1,
 	add_to_cleanup       =>
