@@ -7,12 +7,17 @@ Changelog.Parser=Config::IniFiles V 2.68
 Date=2012-10-04T12:10:00
 Comments= <<EOT
 - Ron Savage is now co-maint.
+- Patch Tree::Fast's meta() to accept a hashref so metadata can be set with $t -> meta({key => value}),
+as well asg by directly accessing the internal hashref '_meta'.
+- Patch t/Tree/001_root_node.t to test the above.
 - Rename Changes to CHANGES.
 - Use ini.report.pl (shipped with Module::Metadata::Changes) to add Changelog.ini to the distro.
 - Reformat the dates in this file.
 - Change lib/Tree/Fast.pm to Unix line endings.
 - Clean up the POD.
 - Re-work Makefile.PL rather than have Build.PL generate it.
+- Update pre-reqs in Build.PL and Makefile.PL.
+- Move t/tests.pm to t/lib/Tests.pm.
 EOT
 
 [V 1.01]
