@@ -18,11 +18,7 @@
    "prereqs" : {
       "build" : {
          "requires" : {
-            "Scalar::Util" : "1.10",
-            "Test::Deep" : "0.088",
-            "Test::Exception" : "0.15",
-            "Test::More" : "0.47",
-            "Test::Warn" : "0.08"
+            "ExtUtils::MakeMaker" : "0"
          }
       },
       "configure" : {
@@ -32,8 +28,17 @@
       },
       "runtime" : {
          "requires" : {
-            "Scalar::Util" : "1.10",
-            "perl" : "v5.6.0"
+            "Data::Dumper" : "2.136",
+            "Scalar::Util" : "1.1",
+            "Test::Deep" : "0.088",
+            "Test::Exception" : "0.15",
+            "Test::More" : "0.47",
+            "Test::Warn" : "0.08",
+            "base" : "2.16",
+            "constant" : "1.21",
+            "overload" : "1.13",
+            "strict" : "1.04",
+            "warnings" : "1.12"
          }
       }
    },
