@@ -1,4 +1,3 @@
-use strict;
 use warnings;
 
 require 5.006000;
@@ -33,11 +32,18 @@ WriteMakefile
 	VERSION_FROM => 'lib/Tree.pm',
 	PREREQ_PM    =>
 	{
-		'Scalar::Util'    => '1.10',
-		'Test::Deep'      => '0.088',
-		'Test::Exception' => '0.15',
-		'Test::More'      => '0.47',
-		'Test::Warn'      => '0.08',
+		base            => 2.16,
+		constant        => 1.21,
+		Data::Dumper    => 2.136,
+		Exporter        => 5.66,
+		overload        => 1.13,
+		Scalar::Util    => 1.10,
+		strict          => 1.04,
+		Test::Deep      => 0.088,
+		Test::Exception => 0.15,
+		Test::More      => 0.47,
+		Test::Warn      => 0.08,
+		warnings        => 1.12,
 	},
 	INSTALLDIRS => 'site',
 	EXE_FILES   => [],
