@@ -3,7 +3,7 @@ Revision history for Perl distribution Tree
 1.02  Thu Oct  4 12:10:00 2012
 	- Ron Savage is now co-maint.
 	- Patch Tree::Fast's meta() to accept a hashref so metadata can be set with $t -> meta({key => value}),
-		as well as by directly accessing the internal hashref '_meta'.
+		as well asg by directly accessing the internal hashref '_meta'.
 	- Patch t/Tree/001_root_node.t to test the above.
 	- Rename Changes to CHANGES.
 	- Use ini.report.pl (shipped with Module::Metadata::Changes) to add Changelog.ini to the distro.
@@ -11,6 +11,8 @@ Revision history for Perl distribution Tree
 	- Change lib/Tree/Fast.pm to Unix line endings.
 	- Clean up the POD.
 	- Re-work Makefile.PL rather than have Build.PL generate it.
+	- Update pre-reqs in Build.PL and Makefile.PL.
+	- Move t/tests.pm to t/lib/Tests.pm.
 
 1.01  Thu Oct 18 12:00:00 2007
 	- Fixed Changes file
